refactor: streamline hotkey management and update configuration handling
- Simplified the hotkey configuration in default.yaml by consolidating the quick note keybinding into a single line.
- Updated the App struct in app.go to use the new config package for improved configuration management.
- Enhanced the SetupUI method to conditionally show the main window based on the configuration and added a hotkey listener for quick note functionality.
- Refactored the hotkey manager to include a method for retrieving the underlying hotkey instance, improving encapsulation and usability.
- Updated systray setup to include a system tray icon, enhancing the user interface experience.

These changes aim to improve the clarity and functionality of hotkey management and application configuration.

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -16,9 +16,7 @@ logger:
   error_output: [ "stderr" ]
 
 hotkeys:
-  quick_note:
-    modifiers: [ "Ctrl", "Shift" ]
-    key: "N"
+  quick_note: "Ctrl+Shift+N"
 
 ui:
   main_window:
