--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,22 +1,26 @@
 # Default configuration for Godo
 app:
   name: "Godo"
-  version: "0.1.0"
-  id: "io.github.jonesrussell.godo"
+  version: "1.0.0"
+  id: "com.jonesrussell.godo"
+
+logger:
+  level: "debug"
+  console: true
+  development: true
+  encoding: "console"
+  encoderConfig:
+    timeKey: "time"
+    levelKey: "level"
+    nameKey: "logger"
+    callerKey: "caller"
+    messageKey: "msg"
+    stacktraceKey: "stacktrace"
+    timeEncoder: "iso8601"
+    levelEncoder: "lowercase"
 
 database:
   path: "godo.db"
-
-logger:
-  level: "info"
-  console: true
-  file: false
-  file_path: ""
-  output: [ "stdout" ]
-  error_output: [ "stderr" ]
-
-hotkeys:
-  quick_note: "Ctrl+Shift+N"
 
 ui:
   main_window:
@@ -24,12 +28,8 @@ ui:
     height: 600
     start_hidden: true
   quick_note:
-    width: 400
-    height: 200
+    width: 200
+    height: 100
 
-http:
-  port: 8080
-  read_timeout: 30
-  write_timeout: 30
-  read_header_timeout: 10
-  idle_timeout: 120
+hotkeys:
+  quick_note: "Ctrl+Shift+N"
