refactor: enhance hotkey management and update configuration handling
- Updated hotkey configuration to use a new HotkeyCombo type for better structure and clarity.
- Refactored hotkey management in the Linux platform to improve encapsulation and prepare for future implementation.
- Simplified the SetupUI method in app_test.go to ensure proper initialization of hotkey management and main window visibility.
- Enhanced tests for hotkey functionality to ensure accurate representation of key combinations and modifiers.

These changes aim to improve the clarity and functionality of hotkey management and application configuration, ensuring better maintainability and user experience.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
             "unusedparams": true,
             "shadow": true
         },
-        "buildFlags": ["-tags=wireinject,windows"]
+        "buildFlags": ["-tags=wireinject,windows,integration"]
     },
     "[go]": {
         "editor.formatOnSave": true,
