refactor: enhance project configuration and best practices documentation
- Updated .cursorignore to include additional development environment files, build artifacts, and test data patterns for improved project cleanliness.
- Revised .cursorrules to reflect updated best practices across various aspects of the project, including code organization, architecture, testing, UI, storage, API, logging, configuration, build, distribution, security, and performance.
- Added new rules and refined existing ones to ensure adherence to modern development standards and improve maintainability.
- Updated .gitignore to exclude new database files related to the application.

These changes aim to streamline the project's structure and enhance the clarity of best practices, fostering better development practices and maintainability.

--- a/.cursorignore
+++ b/.cursorignore
@@ -1,32 +1,76 @@
-# IDE and editor files
+# Development environments and editors
 .vscode/
 .idea/
 .devcontainer/
+*.swp
+*.swo
+*~
 
 # Build artifacts and binaries
 bin/
+dist/
 vendor/
 coverage/
 *.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 *.db
+*.db-*
 *.log
 *.out
 *_gen.go
+*.test
+*.prof
+*.trace
+*.cov
 
 # CI/CD and quality tools
 .github/
-qodana.yml
-qodana.sarif.json
+.gitlab/
+.circleci/
+qodana.*
+.golangci.yml
+.codecov.yml
+coverage.txt
+coverage.html
 
-# Task runners
+# Task runners and build tools
 Taskfile.yaml
 taskfile.yml
+.task/
+.air.toml
 
 # Docker
 build/docker/
+.docker/
+*.dockerfile
+Dockerfile.*
 
-# Generated documentation
+# Generated documentation and specs
 docs/generated/
+api/generated/
+swagger.*
+openapi.*
 
-# Test data
-testdata/ 
+# Test data and mocks
+testdata/
+mock_*.go
+*_mock.go
+*.test.db
+
+# Platform-specific
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Project-specific
+*.sqlite
+*.sqlite3
+godo.db*
+.env
+.env.*
+config.local.yaml
+debug/
+tmp/ 
