--- a/internal/config/testdata/config.yaml
+++ b/internal/config/testdata/config.yaml
@@ -12,9 +12,10 @@ logger:
   console: true
   file: false
   file_path: ""
-  output: ["stdout"]
-  error_output: ["stderr"]
+  output: [ "stdout" ]
+  error_output: [ "stderr" ]
 
 hotkeys:
-  quick_note: "Ctrl+Alt+G"
-  
+  quick_note:
+    modifiers: [ "Ctrl", "Alt" ]
+    key: "G"
