chore: update .gitignore, add Godo linter configuration, and enhance go.mod dependencies
- Added godo-linter.exe to .gitignore to prevent it from being tracked.
- Configured the Godo linter in .golangci.yml with a custom path and description for project-specific linting rules.
- Updated go.mod to include the golang.org/x/tools and other indirect dependencies, ensuring the project has the latest tools and libraries.

These changes aim to improve project organization and maintainability by managing dependencies and linting configurations effectively.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -14,8 +14,15 @@ linters:
   - unused
   - mnd
   - copyloopvar
+  - godolinter
 
 linters-settings:
+  custom:
+    godolinter:
+      path: ./cmd/godo-linter
+      description: "Godo project-specific linting rules"
+      original-url: "github.com/jonesrussell/godo/cmd/godo-linter"
+
   gocritic:
     enabled-tags:
     - diagnostic
