refactor: update linting configuration and streamline linter tasks
- Removed custom Godo linter configuration from .golangci.yml to simplify linting setup.
- Enhanced Taskfile.yaml to define separate linting tasks for golangci-lint and custom linter execution, improving clarity and usability.
- Cleaned up main.go in the godo-linter to remove unnecessary analyzer plugin definition, streamlining the code.

These changes aim to improve the organization and maintainability of the linting process within the project.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -46,10 +46,20 @@ tasks:
     - goimports -w .
 
   lint:
-    desc: Run linters
-    deps: [ wire:windows ]
+    desc: Run all linters
     cmds:
-    - golangci-lint run ./...
+    - golangci-lint run
+    - go run ./cmd/godo-linter ./...
+
+  lint:golangci:
+    desc: Run golangci-lint
+    cmds:
+    - golangci-lint run
+
+  lint:custom:
+    desc: Run custom linter
+    cmds:
+    - go run ./cmd/godo-linter ./...
 
   test:
     desc: Run basic tests
