--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,39 @@
 {
     "go.lintTool": "golangci-lint",
     "go.lintFlags": [
-        "--fast"
+        "--fast",
+        "--timeout=5m"
     ],
     "go.lintOnSave": "package",
     "go.useLanguageServer": true,
     "gopls": {
         "formatting.gofumpt": true,
+        "ui.semanticTokens": true,
         "ui.diagnostic.analyses": {
             "unusedparams": true,
             "shadow": true
         },
-        "buildFlags": ["-tags=wireinject,windows,integration"]
+        "ui.inlayHints": {
+            "parameterNames": true,
+            "compositeLiteralFields": true,
+            "compositeLiteralTypes": true,
+            "functionTypeParameters": true,
+            "rangeVariableTypes": true,
+            "constantValues": true
+        }
+    },
+    "go.diagnostic.vulncheck": "Imports",
+    "go.enableCodeLens": {
+        "runtest": true
     },
     "[go]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "golang.go",
         "editor.codeActionsOnSave": {
-            "source.organizeImports": "never"
+            "source.organizeImports": "always"
         }
     },
     "editor.codeActionsOnSave": {
-        "source.organizeImports": "never"
+        "source.organizeImports": "always"
     }
 } 
