Refactor platform-specific considerations and update VSCode settings
- Removed outdated platform-specific considerations from .cursor/rules/godo-platform-considerations.mdc to streamline documentation.
- Added recommendations for Go extensions in .vscode/extensions.json to enhance development experience.
- Improved .vscode/settings.json by enabling inlay hints for better code visibility and organization.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,20 +12,18 @@
         "ui.diagnostic.analyses": {
             "unusedparams": true,
             "shadow": true
-        },
-        "ui.inlayHints": {
-            "parameterNames": true,
-            "compositeLiteralFields": true,
-            "compositeLiteralTypes": true,
-            "functionTypeParameters": true,
-            "rangeVariableTypes": true,
-            "constantValues": true
         }
     },
     "go.diagnostic.vulncheck": "Imports",
     "go.enableCodeLens": {
         "runtest": true
     },
+    "go.inlayHints.parameterNames": true,
+    "go.inlayHints.compositeLiteralFields": true,
+    "go.inlayHints.compositeLiteralTypes": true,
+    "go.inlayHints.functionTypeParameters": true,
+    "go.inlayHints.rangeVariableTypes": true,
+    "go.inlayHints.constantValues": true,
     "[go]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "golang.go",
