refactor: update test structure to use gomock for mocking
- Replaced custom mock implementation with gomock for better test reliability and maintainability.
- Updated test cases to set expectations using gomock, enhancing clarity and reducing boilerplate code.
- Adjusted build tags in .vscode/settings.json for improved compatibility.
- Added go.uber.org/mock dependency in go.mod for mocking capabilities.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
             "shadow": true
         },
         "buildFlags": [
-            "-tags=wireinject,windows,linux"
+            "-tags=wireinject,linux"
         ]
     },
     "go.diagnostic.vulncheck": "Imports",
