--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -111,6 +111,18 @@ tasks:
     # Cleanup Xvfb
     - pkill Xvfb || true
 
+  test:wsl2:
+    desc: Run tests in WSL2 environment with X11 forwarding
+    deps: [ wire ]
+    platforms: [ linux ]
+    cmds:
+    - mkdir -p {{.COVERAGE_DIR}}
+    # Check if we're in WSL2
+    - echo "Testing in WSL2 environment with DISPLAY={{.DISPLAY}}"
+    # Run tests with current display (should work with X11 forwarding)
+    - DISPLAY={{.DISPLAY}} FYNE_RENDERER=software go test -race -coverprofile={{.COVERAGE_DIR}}/coverage.out -covermode=atomic ./...
+    - go tool cover -html={{.COVERAGE_DIR}}/coverage.out -o {{.COVERAGE_DIR}}/coverage.html
+
   clean:
     desc: Clean up generated files
     cmds:
@@ -133,7 +145,7 @@ tasks:
   wire:
     desc: Generate wire code for current platform
     cmds:
-    - task: wire:{{OS}}
+    - task: wire:{{.GOOS}}
 
   # Docker-based builds with improved caching and parallel builds
   docker:build-image:
@@ -143,7 +155,6 @@ tasks:
 
   docker:build-all:
     desc: Build both Windows and Linux binaries using Docker
-    parallel: true
     cmds:
     - task: docker:build-linux
     - task: docker:build-windows
@@ -194,10 +205,35 @@ tasks:
     - mkdir -p {{.BUILD_DIR}}
     - go build -ldflags "-X main.version={{.VERSION}} -X main.commit={{.COMMIT}} -X main.buildTime={{.BUILD_TIME}} -s -w" -tags linux -o {{.BUILD_DIR}}/{{.BINARY_NAME}} cmd/godo/main.go
 
+  # Cross-compilation builds (from WSL2 to Windows)
+  build:cross-windows:
+    desc: Cross-compile for Windows from Linux/WSL2
+    deps: [ wire:windows ]
+    platforms: [ linux ]
+    env:
+      CGO_ENABLED: 0
+      GOOS: windows
+      GOARCH: amd64
+    cmds:
+    - mkdir -p {{.BUILD_DIR}}
+    - go build -ldflags "-X main.version={{.VERSION}} -X main.commit={{.COMMIT}} -X main.buildTime={{.BUILD_TIME}} -s -w" -tags windows -o {{.BUILD_DIR}}/{{.BINARY_NAME}}.exe cmd/godo/main.go
+
+  build:cross-linux:
+    desc: Cross-compile for Linux from Windows
+    deps: [ wire:linux ]
+    platforms: [ windows ]
+    env:
+      CGO_ENABLED: 0
+      GOOS: linux
+      GOARCH: amd64
+    cmds:
+    - mkdir -p {{.BUILD_DIR}}
+    - go build -ldflags "-X main.version={{.VERSION}} -X main.commit={{.COMMIT}} -X main.buildTime={{.BUILD_TIME}} -s -w" -tags linux -o {{.BUILD_DIR}}/{{.BINARY_NAME}} cmd/godo/main.go
+
   build:
     desc: Build for current platform (native)
     cmds:
-    - task: build:{{OS}}
+    - task: build:{{.GOOS}}
 
   run:
     desc: Run the application
@@ -223,12 +259,11 @@ tasks:
   watch:
     desc: Watch for changes and rebuild
     cmds:
-    - watchexec -r -e go "task build && {{if eq OS \"windows\"}}{{.BUILD_DIR}}/{{.BINARY_NAME}}.exe{{else}}{{.BUILD_DIR}}/{{.BINARY_NAME}}{{end}}"
+    - watchexec -r -e go "task build && {{if eq .GOOS \"windows\"}}{{.BUILD_DIR}}/{{.BINARY_NAME}}.exe{{else}}{{.BUILD_DIR}}/{{.BINARY_NAME}}{{end}}"
 
   # CI/CD tasks
   ci:
     desc: Run CI checks
-    parallel: true
     cmds:
     - task: lint
     - task: test
@@ -277,15 +312,73 @@ tasks:
     - task: test
     - task: docker:build-all
 
+  wsl2:all:
+    desc: Complete WSL2 workflow - setup, build, test, and copy to Windows
+    cmds:
+    - task: wsl2:setup
+    - task: deps
+    - task: fmt
+    - task: lint
+    - task: test
+    - task: wsl2:build-windows
+    - task: wsl2:copy-to-windows
+
   dev:
     desc: Development workflow - format, lint, test
-    parallel: true
     cmds:
     - task: lint
     - task: test
+
+  dev:wsl2:
+    desc: WSL2 development workflow - format, lint, test with X11
+    cmds:
+    - task: lint
+    - task: test:wsl2
 
   check:
     desc: Quick check - format and lint only
     deps: [ fmt ]
     cmds:
     - golangci-lint run ./... --fast
+
+  # WSL2-specific tasks
+  wsl2:setup:
+    desc: Setup WSL2 environment for development
+    platforms: [ linux ]
+    cmds:
+    - echo "Setting up WSL2 environment..."
+    - echo "DISPLAY: {{.DISPLAY}}"
+    - echo "Checking X11 availability..."
+    - xdpyinfo > /dev/null 2>&1 && echo "X11 is available" || echo "X11 not available - install VcXsrv or similar on Windows"
+    - echo "Checking for WSL2..."
+    - uname -a | grep -i microsoft && echo "Running in WSL2" || echo "Not running in WSL2"
+
+  wsl2:build-windows:
+    desc: Build Windows executable from WSL2
+    deps: [ wsl2:setup, wire:windows ]
+    platforms: [ linux ]
+    cmds:
+    - echo "Building Windows executable from WSL2..."
+    - task: build:cross-windows
+    - echo "Windows executable created: {{.BUILD_DIR}}/{{.BINARY_NAME}}.exe"
+    - echo "You can copy this to Windows and run it natively"
+
+  wsl2:test-gui:
+    desc: Test GUI components in WSL2 with X11
+    deps: [ wire ]
+    platforms: [ linux ]
+    cmds:
+    - echo "Testing GUI in WSL2 environment..."
+    - echo "DISPLAY: {{.DISPLAY}}"
+    - DISPLAY={{.DISPLAY}} FYNE_RENDERER=software go test -v ./internal/gui/...
+
+  wsl2:copy-to-windows:
+    desc: Copy Windows executable to Windows-accessible location
+    deps: [ wsl2:build-windows ]
+    platforms: [ linux ]
+    cmds:
+    - echo "Copying Windows executable to Windows-accessible location..."
+    - mkdir -p /mnt/c/Users/{{.USER}}/Desktop/godo-windows
+    - cp {{.BUILD_DIR}}/{{.BINARY_NAME}}.exe /mnt/c/Users/{{.USER}}/Desktop/godo-windows/
+    - echo "Windows executable copied to: C:\Users\{{.USER}}\Desktop\godo-windows\{{.BINARY_NAME}}.exe"
+    - echo "You can now run this executable directly on Windows"
